<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/running_bg">
    <include layout="@layout/top_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:layout_marginTop="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="2"
            
            android:text="@string/oldpassword"
            android:fontFamily="@string/myfont"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_oldpassword"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/DIMEN_60PX"
            android:background="@drawable/beijingtiao"
            android:ems="13"
            android:inputType="textPassword"
            android:hint="输入原始密码"
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:fontFamily="@string/myfont"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/DIMEN_15PX"
         android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/DIMEN_60PX"
            android:text="@string/newpassword"
            android:fontFamily="@string/myfont"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_newpassword"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/DIMEN_60PX"
            android:background="@drawable/beijingtiao"
            android:ems="13"
            android:hint="输入新密码 "
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:inputType="textPassword"
            android:textColor="@color/fontcolor"
            android:fontFamily="@string/myfont"
            android:textSize="@dimen/DIMEN_30PX" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/DIMEN_15PX"
         android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:fontFamily="@string/myfont"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/DIMEN_60PX"
            android:text="@string/passwordagain"
            android:textColor="@color/fontcolor"
            android:fontFamily="@string/myfont"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_resetpassword"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/DIMEN_60PX"
            android:background="@drawable/beijingtiao"
            android:ems="13"
            android:hint="重新输入新密码"
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:inputType="textPassword"
            android:fontFamily="@string/myfont"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:gravity="center">
        <Button
            android:id="@+id/revise_password_btnsave"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="70dp"
            android:text="确定" />

        <Button
            android:id="@+id/revise_password_cancel"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="取消" />
    </LinearLayout>

</LinearLayout>
